# presence-qa-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  main.py  pyproject.toml
configs/: conf.yaml
configs/datasets/: boolq.yaml  mnli.yaml
configs/logging/: mlflow.yaml
configs/models/: gemma270m.yaml
configs/training_process/: training_process.yaml
data_system_prompts/: boolq_system_prompt.txt  mnli_system_prompt.txt
presence_qa_classifier/: __init__.py  config.py  data_loader.py  metrics.py  model_trainer.py  train.py
presence_qa_classifier/data_preparation/: boolq_preparation.py  mnli_preparation.py
presence_qa_classifier/save_formats/: onnx_save.py
scripts/: load_data.sh
