[project]
name = "presence-qa-classifier"
version = "0.1.0"
description = "Train and deploy classifier that checks is there an answer on the question in the text."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.65.0",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.1.0",
    "unsloth>=2025.12.9",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mlflow>=3.8.0",
    "pandas>=2.3.3",
]
